manifests/backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: realworld
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
